Fix spot light implementation

--- a/src/ui.css
+++ b/src/ui.css
@@ -6,6 +6,15 @@ body {
     overflow: hidden;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+* {
+    user-select: none;
+}
 canvas {
     outline: none;
 }
