Implement recursive update  for toggle cast and recieve shadow on the UI

--- a/src/ui.css
+++ b/src/ui.css
@@ -253,3 +253,7 @@ light__textInput--faint {
 .TreeHeader:hover .r {
     visibility: visible;
 }
+/* 
+.NodeContainer {
+    border-right: 0 !important;
+} */
