-> Fix initial false highlight issue on inspectors item -> Implement use model filename as Group name when imported

--- a/src/ui.css
+++ b/src/ui.css
@@ -250,7 +250,7 @@ light__textInput--faint {
     overflow: hidden;
 }
 
-.TreeHeader:hover .r {
+.NodeContainer:hover .r {
     visibility: visible;
 }
 
